Fix letter spacing

--- a/app/stylesheets/sass/partials/bubble.sass
+++ b/app/stylesheets/sass/partials/bubble.sass
@@ -22,6 +22,8 @@ $bubbleCartBackgroundHover: rgba(#2453cb, 0.7)
   background-color: $bubbleBackground
   z-index: $bubbleZindex
   transition: background-color .2s ease
+  letter-spacing: 0
+  word-spacing: 0
   &:before
     content: ''
     position: absolute
